# dns-tunnel-ml

./: .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  pyproject.toml  quick_validate.py  requirements.txt
configs/: data_pipeline.yaml  gao2024_pipeline.yaml  train_rf.yaml
docs/: ARCHITECTURE_QUICK_REFERENCE.md  DATA_PIPELINE_GUIDE.md  DEPLOYMENT_CHECKLIST.md  FEATURE_ENGINEERING.md  GAO2024_MIGRATION_GUIDE.md  MODEL_TRAINING.md  VENV_SETUP.md  data_pipeline.md
notebooks/: 01_eda.ipynb
scripts/evaluate/: synthetic_test.py
scripts/features/: extract.py
scripts/train/: train_rf.py
scripts/workflows/: README.md  upgrade_to_gao2024.ps1
src/features/: __init__.py  extractor.py  sequence_builder.py
src/utils/: __init__.py  logging_setup.py
